--- a/src/html/MenuCoreDefense.html
+++ b/src/html/MenuCoreDefense.html
@@ -290,12 +290,14 @@
 
 			if (stringValue === "off"){
 				window.localStorage.setItem("sonido", "on");
-
+				this.audio.play();
+				this.audio.loop= true;
 				var img = document.getElementById("botonsonido");
 				img.src = "../images/boton on opciones.png";
 			}else{
 				window.localStorage.setItem("sonido", "off");
-
+				this.audio.pause();
+				this.audio.currentTime = 0;
 				var img = document.getElementById("botonsonido");
 				img.src = "../images/boton off opciones.png";
 			}
@@ -303,11 +305,11 @@
 		//Por si se recarga la pagina que carge su configuracion si no esta por defecto
 		function initVariables(){
 
-			 var audio = new Audio("../audio/menu.wav");
+			 this.audio = new Audio("../audio/menu.wav");
 
 			 if (sonido === "on"){
-			 audio.play();
-			 audio.loop= true;
+				this.audio.play();
+				this.audio.loop= true;
 			 }
 
 			if (idioma === "en"){
