--- a/src/html/MenuCoreDefense.html
+++ b/src/html/MenuCoreDefense.html
@@ -205,32 +205,112 @@
 
 				var img = document.getElementById("creditos");
 				img.src = "../images/CREDITS_BUTTON.png";
+				img.onmouseover = function(){
+					this.src= "../images/CREDITS_BUTTON_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/CREDITS_BUTTON.png";
+				}
+
 				img = document.getElementById("opciones");
 				img.src = "../images/OPTIONS_BUTTON.png";
+				img.onmouseover = function(){
+					this.src= "../images/OPTIONS_BUTTON_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/OPTIONS_BUTTON.png";
+				}
+
 				img = document.getElementById("instrucciones");
 				img.src = "../images/INDTRUCTIONS_BUTTON.png";
+				img.onmouseover = function(){
+					this.src= "../images/INDTRUCTIONS_BUTTON_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/INDTRUCTIONS_BUTTON.png";
+				}
 				img = document.getElementById("soloplayer");
 				img.src = "../images/SINGLEPLAYER_BUTTON.png";
+				img.onmouseover = function(){
+					this.src= "../images/SINGLEPLAYER_BUTTON_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/SINGLEPLAYER_BUTTON.png";
+				}
 				img = document.getElementById("multiplayer");
 				img.src = "../images/MULTIPLAYER_BUTTON.png";
+				img.onmouseover = function(){
+					this.src= "../images/MULTIPLAYER_BUTTON_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/MULTIPLAYER_BUTTON.png";
+				}
 				img = document.getElementById("fondosoloplayer");
 				img.src = "../images/NIVELES_SINGLEPLAYER.png";
+				img.onmouseover = function(){
+					this.src= "../images/NIVELES_SINGLEPLAYER_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/NIVELES_SINGLEPLAYER.png";
+				}
 				img = document.getElementById("fondomultiplayer");
 				img.src = "../images/NIVELES_MULTIPLAYER.png";
+				img.onmouseover = function(){
+					this.src= "../images/NIVELES_MULTIPLAYER_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/NIVELES_MULTIPLAYER.png";
+				}
 
 				img = document.getElementById("facil");
 				img.src = "../images/EASY_BUTTON.png";
+				img.onmouseover = function(){
+					this.src= "../images/EASY_BUTTON_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/EASY_BUTTON.png";
+				}
 				img = document.getElementById("medio");
 				img.src = "../images/NORMAL_BUTTON.png";
+				img.onmouseover = function(){
+					this.src= "../images/NORMAL_BUTTON_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/NORMAL_BUTTON.png";
+				}
 				img = document.getElementById("dificil");
 				img.src = "../images/HARD_BUTTON.png";
+				img.onmouseover = function(){
+					this.src= "../images/HARD_BUTTON_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/HARD_BUTTON.png";
+				}
 
 				img = document.getElementById("facilm");
 				img.src = "../images/EASY_BUTTON.png";
+				img.onmouseover = function(){
+					this.src= "../images/EASY_BUTTON_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/EASY_BUTTON.png";
+				}
 				img = document.getElementById("mediom");
 				img.src = "../images/NORMAL_BUTTON.png";
+				img.onmouseover = function(){
+					this.src= "../images/NORMAL_BUTTON_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/NORMAL_BUTTON.png";
+				}
 				img = document.getElementById("dificilm");
 				img.src = "../images/HARD_BUTTON.png";
+				img.onmouseover = function(){
+					this.src= "../images/HARD_BUTTON_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/HARD_BUTTON.png";
+				}
 
 				img = document.getElementById("fondoinstrucciones");
 				img.src = "../images/fondo_instrucciones_ingles.png";
@@ -239,6 +319,12 @@
 				img.src = "../images/fondo_opciones_ingles.png";
 				img = document.getElementById("botonidioma");
 				img.src = "../images/boton ingles opciones.png";
+				img.onmouseover = function(){
+					this.src= "../images/boton ingles opciones_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/boton ingles opciones.png";
+				}
 
 				img = document.getElementById("fondocreditos");
 				img.src = "../images/fondo_creditos_ingles.png";
@@ -247,32 +333,111 @@
 
 				var img = document.getElementById("creditos");
 				img.src = "../images/CREDITOS_BUTTON.png";
+				img.onmouseover = function(){
+					this.src= "../images/CREDITOS_BUTTON_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/CREDITOS_BUTTON.png";
+				}
+
 				img = document.getElementById("opciones");
 				img.src = "../images/OPCIONES_BUTTON.png";
+				img.onmouseover = function(){
+					this.src= "../images/OPCIONES_BUTTON_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/OPCIONES_BUTTON.png";
+				}
 				img = document.getElementById("instrucciones");
 				img.src = "../images/INDTRUCCIONES_BUTTON.png";
+				img.onmouseover = function(){
+					this.src= "../images/INDTRUCCIONES_BUTTON_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/INDTRUCCIONES_BUTTON.png";
+				}
 				img = document.getElementById("soloplayer");
 				img.src = "../images/UNJUGADOR_BUTTON.png";
+				img.onmouseover = function(){
+					this.src= "../images/UNJUGADOR_BUTTON_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/UNJUGADOR_BUTTON.png";
+				}
 				img = document.getElementById("multiplayer");
 				img.src = "../images/MULTIJUGADOR_BUTTON.png";
+				img.onmouseover = function(){
+					this.src= "../images/MULTIJUGADOR_BUTTON_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/MULTIJUGADOR_BUTTON.png";
+				}
 				img = document.getElementById("fondosoloplayer");
 				img.src = "../images/NIVELES_UNJUGADOR.png";
+				img.onmouseover = function(){
+					this.src= "../images/NIVELES_UNJUGADOR_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/NIVELES_UNJUGADOR.png";
+				}
 				img = document.getElementById("fondomultiplayer");
 				img.src = "../images/NIVELES_MULTIJUGADOR.png";
+				img.onmouseover = function(){
+					this.src= "../images/NIVELES_MULTIJUGADOR_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/NIVELES_MULTIJUGADOR.png";
+				}
 
 				img = document.getElementById("facil");
 				img.src = "../images/FACIL_BUTTON.png";
+				img.onmouseover = function(){
+					this.src= "../images/FACIL_BUTTON_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/FACIL_BUTTON.png";
+				}
 				img = document.getElementById("medio");
 				img.src = "../images/MEDIO_BUTTON.png";
+				img.onmouseover = function(){
+					this.src= "../images/MEDIO_BUTTON_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/MEDIO_BUTTON.png";
+				}
 				img = document.getElementById("dificil");
 				img.src = "../images/DIFICIL_BUTTON.png";
+				img.onmouseover = function(){
+					this.src= "../images/DIFICIL_BUTTON_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/DIFICIL_BUTTON.png";
+				}
 
 				img = document.getElementById("facilm");
 				img.src = "../images/FACIL_BUTTON.png";
+				img.onmouseover = function(){
+					this.src= "../images/FACIL_BUTTON_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/FACIL_BUTTON.png";
+				}
 				img = document.getElementById("mediom");
 				img.src = "../images/MEDIO_BUTTON.png";
+				img.onmouseover = function(){
+					this.src= "../images/MEDIO_BUTTON_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/MEDIO_BUTTON.png";
+				}
 				img = document.getElementById("dificilm");
 				img.src = "../images/DIFICIL_BUTTON.png";
+				img.onmouseover = function(){
+					this.src= "../images/DIFICIL_BUTTON_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/DIFICIL_BUTTON.png";
+				}
 
 				img = document.getElementById("fondoinstrucciones");
 				img.src = "../images/fondo_instrucciones_esp.png";
@@ -281,6 +446,12 @@
 				img.src = "../images/fondo_opciones_esp.png";
 				img = document.getElementById("botonidioma");
 				img.src = "../images/boton españolopciones.png";
+				img.onmouseover = function(){
+					this.src= "../images/boton españolopciones_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/boton españolopciones.png";
+				}
 
 				img = document.getElementById("fondocreditos");
 				img.src = "../images/fondo_creditos_español.png";
@@ -296,12 +467,26 @@
 				this.mus_menu.loop= true;
 				var img = document.getElementById("botonsonido");
 				img.src = "../images/boton on opciones.png";
+
+				img.onmouseover = function(){
+					this.src= "../images/boton on opciones_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/boton on opciones.png";
+				}
 			}else{
 				window.localStorage.setItem("sonido", "off");
 				this.mus_menu.pause();
 				this.mus_menu.currentTime = 0;
 				var img = document.getElementById("botonsonido");
 				img.src = "../images/boton off opciones.png";
+
+				img.onmouseover = function(){
+					this.src= "../images/boton off opciones_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/boton off opciones.png";
+				}
 			}
 		}
 		//Por si se recarga la pagina que carge su configuracion si no esta por defecto
@@ -316,32 +501,114 @@
 			if (idioma === "en"){
 				var img = document.getElementById("creditos");
 				img.src = "../images/CREDITS_BUTTON.png";
+
+				img.onmouseover = function(){
+					this.src= "../images/CREDITS_BUTTON_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/CREDITS_BUTTON.png";
+				}
+					
+				//img.onmouseout = "../images/CREDITS_BUTTON.png";
+
 				img = document.getElementById("opciones");
 				img.src = "../images/OPTIONS_BUTTON.png";
+				img.onmouseover = function(){
+					this.src= "../images/OPTIONS_BUTTON_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/OPTIONS_BUTTON.png";
+				}
 				img = document.getElementById("instrucciones");
 				img.src = "../images/INDTRUCTIONS_BUTTON.png";
+				img.onmouseover = function(){
+					this.src= "../images/INDTRUCTIONS_BUTTON_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/INDTRUCTIONS_BUTTON.png";
+				}
 				img = document.getElementById("soloplayer");
 				img.src = "../images/SINGLEPLAYER_BUTTON.png";
+				img.onmouseover = function(){
+					this.src= "../images/SINGLEPLAYER_BUTTON_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/SINGLEPLAYER_BUTTON.png";
+				}
 				img = document.getElementById("multiplayer");
 				img.src = "../images/MULTIPLAYER_BUTTON.png";
+				img.onmouseover = function(){
+					this.src= "../images/MULTIPLAYER_BUTTON_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/MULTIPLAYER_BUTTON.png";
+				}
 				img = document.getElementById("fondosoloplayer");
 				img.src = "../images/NIVELES_SINGLEPLAYER.png";
+				img.onmouseover = function(){
+					this.src= "../images/NIVELES_SINGLEPLAYER_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/NIVELES_SINGLEPLAYER.png";
+				}
 				img = document.getElementById("fondomultiplayer");
 				img.src = "../images/NIVELES_MULTIPLAYER.png";
+				img.onmouseover = function(){
+					this.src= "../images/NIVELES_MULTIPLAYER_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/NIVELES_MULTIPLAYER.png";
+				}
 
 				img = document.getElementById("facil");
 				img.src = "../images/EASY_BUTTON.png";
+				img.onmouseover = function(){
+					this.src= "../images/EASY_BUTTON_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/EASY_BUTTON.png";
+				}
 				img = document.getElementById("medio");
 				img.src = "../images/NORMAL_BUTTON.png";
+				img.onmouseover = function(){
+					this.src= "../images/NORMAL_BUTTON_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/NORMAL_BUTTON.png";
+				}
 				img = document.getElementById("dificil");
 				img.src = "../images/HARD_BUTTON.png";
+				img.onmouseover = function(){
+					this.src= "../images/HARD_BUTTON_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/HARD_BUTTON.png";
+				}
 
 				img = document.getElementById("facilm");
 				img.src = "../images/EASY_BUTTON.png";
+				img.onmouseover = function(){
+					this.src= "../images/EASY_BUTTON_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/EASY_BUTTON.png";
+				}
 				img = document.getElementById("mediom");
 				img.src = "../images/NORMAL_BUTTON.png";
+				img.onmouseover = function(){
+					this.src= "../images/NORMAL_BUTTON_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/NORMAL_BUTTON.png";
+				}
 				img = document.getElementById("dificilm");
 				img.src = "../images/HARD_BUTTON.png";
+				img.onmouseover = function(){
+					this.src= "../images/HARD_BUTTON_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/HARD_BUTTON.png";
+				}
 
 				img = document.getElementById("fondoinstrucciones");
 				img.src = "../images/fondo_instrucciones_ingles.png";
@@ -350,6 +617,12 @@
 				img.src = "../images/fondo_opciones_ingles.png";
 				img = document.getElementById("botonidioma");
 				img.src = "../images/boton ingles opciones.png";
+				img.onmouseover = function(){
+					this.src= "../images/boton ingles opciones_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/boton ingles opciones.png";
+				}
 				
 			}
 			if (sonido === "off"){
@@ -386,77 +659,113 @@
 		<img src = "../images/fondo.png" style="z-index: 0" class="fondo"/>
 
 		<img id="creditos" src = "../images/CREDITOS_BUTTON.png" class="creditos" style="z-index: 1"
-		onmousedown="creditos()"/>
+		onmousedown="creditos()"
+		onmouseover="this.src='../images/CREDITOS_BUTTON_claro.png'"
+		onmouseout="this.src='../images/CREDITOS_BUTTON.png'" />
 		
 		<img id="opciones" src = "../images/OPCIONES_BUTTON.png" class="opciones" style="z-index: 1"
-		onmousedown="opciones()"/>
+		onmousedown="opciones()"
+		onmouseover="this.src='../images/OPCIONES_BUTTON_claro.png'"
+		onmouseout="this.src='../images/OPCIONES_BUTTON.png'"/>
 
 		<img id="instrucciones" src = "../images/INDTRUCCIONES_BUTTON.png" class="instrucciones" style="z-index: 1"
-		onmousedown="instrucciones()"/>
+		onmousedown="instrucciones()"
+		onmouseover="this.src='../images/INDTRUCCIONES_BUTTON_claro.png'"
+		onmouseout="this.src='../images/INDTRUCCIONES_BUTTON.png'"/>
 
 		<img id="soloplayer" src = "../images/UNJUGADOR_BUTTON.png" class="soloplay" style="z-index: 1"
-		onmousedown="unJugador()"/>
+		onmousedown="unJugador()"
+		onmouseover="this.src='../images/UNJUGADOR_BUTTON_claro.png'"
+		onmouseout="this.src='../images/UNJUGADOR_BUTTON.png'"/>
 		<img id="multiplayer" src = "../images/MULTIJUGADOR_BUTTON.png" class="multijugador" style="z-index: 1"
-		onmousedown="multijugador()"/>
+		onmousedown="multijugador()"
+		onmouseover="this.src='../images/MULTIJUGADOR_BUTTON_claro.png'"
+		onmouseout="this.src='../images/MULTIJUGADOR_BUTTON.png'"/>
 	</p>
 
 	<p id="menuSoloPlayer" align = "center" style ="display:none">
 		<img id="fondosoloplayer" src = "../images/NIVELES_UNJUGADOR.png" style="z-index: 0" class="fondo"/>
 
 		<img id="facil" src = "../images/FACIL_BUTTON.png" class="dificultadFacil" style="z-index: 1"
-		onmousedown="jugar(0,1)"/>
+		onmousedown="jugar(0,1)"
+		onmouseover="this.src='../images/FACIL_BUTTON_claro.png'"
+		onmouseout="this.src='../images/FACIL_BUTTON.png'"/>
 
 		<img id="medio" src = "../images/MEDIO_BUTTON.png" class="dificultadMedio" style="z-index: 1"
-		onmousedown="jugar(1,1)"/>
+		onmousedown="jugar(1,1)"
+		onmouseover="this.src='../images/MEDIO_BUTTON_claro.png'"
+		onmouseout="this.src='../images/MEDIO_BUTTON.png'"/>
 
 		<img id="dificil" src = "../images/DIFICIL_BUTTON.png" class="dificultadDificil" style="z-index: 1"
-		onmousedown="jugar(2,1)"/>
+		onmousedown="jugar(2,1)"
+		onmouseover="this.src='../images/DIFICIL_BUTTON_claro.png'"
+		onmouseout="this.src='../images/DIFICIL_BUTTON.png'"/>
 
 		<img src = "../images/BOTONATRAS.png" class="botonAtras" style="z-index: 1"
-		onmousedown="atras()"/>
+		onmousedown="atras()"
+		onmouseover="this.src='../images/BOTONATRAS_claro.png'"
+		onmouseout="this.src='../images/BOTONATRAS.png'"/>
 	</p>
 
 	<p id="menuMultiplayer" align = "center" style ="display:none">
 		<img id="fondomultiplayer" src = "../images/NIVELES_MULTIJUGADOR.png" style="z-index: 0" class="fondo"/>
 
 		<img id="facilm" src = "../images/FACIL_BUTTON.png" class="dificultadFacil" style="z-index: 1"
-		onmousedown="jugar(1,2)"/>
+		onmousedown="jugar(1,2)"
+		onmouseover="this.src='../images/FACIL_BUTTON_claro.png'"
+		onmouseout="this.src='../images/FACIL_BUTTON.png'"/>
 
 		<img id="mediom" src = "../images/MEDIO_BUTTON.png" class="dificultadMedio" style="z-index: 1"
-		onmousedown="jugar(2,2)"/>
+		onmousedown="jugar(2,2)"
+		onmouseover="this.src='../images/MEDIO_BUTTON_claro.png'"
+		onmouseout="this.src='../images/MEDIO_BUTTON.png'"/>
 
 		<img id="dificilm" src = "../images/DIFICIL_BUTTON.png" class="dificultadDificil" style="z-index: 1"
-		onmousedown="jugar(3,2)"/>
+		onmousedown="jugar(3,2)"
+		onmouseover="this.src='../images/DIFICIL_BUTTON_claro.png'"
+		onmouseout="this.src='../images/DIFICIL_BUTTON.png'"/>
 
 		<img src = "../images/BOTONATRAS.png" class="botonAtras" style="z-index: 1"
-		onmousedown="atras()"/>
+		onmousedown="atras()"
+		onmouseover="this.src='../images/BOTONATRAS_claro.png'"
+		onmouseout="this.src='../images/BOTONATRAS.png'"/>
 	</p>
 
 	<p id="menuInstrucciones" align = "center" style ="display:none">
 		<img id="fondoinstrucciones" src = "../images/fondo_instrucciones_esp.png" style="z-index: 0" class="fondo"/>
 
 		<img src = "../images/BOTONATRAS.png" class="botonAtras" style="z-index: 1"
-		onmousedown="atras()"/>
+		onmousedown="atras()"
+		onmouseover="this.src='../images/BOTONATRAS_claro.png'"
+		onmouseout="this.src='../images/BOTONATRAS.png'"/>
 	</p>
 
 	<p id="menuCreditos" align = "center" style ="display:none">
 		<img id="fondocreditos" src = "../images/fondo_creditos_español.png" style="z-index: 0" class="fondo"/>
 
 		<img src = "../images/BOTONATRAS.png" class="botonAtras" style="z-index: 1"
-		onmousedown="atras()"/>
+		onmousedown="atras()"
+		onmouseover="this.src='../images/BOTONATRAS_claro.png'"
+		onmouseout="this.src='../images/BOTONATRAS.png'"/>
 	</p>
 
 	<p id="menuOpciones" align = "center" style ="display:none">
 		<img id="fondoopciones" src = "../images/fondo_opciones_esp.png" style="z-index: 0" class="fondo"/>
 
 		<img id="botonidioma" src = "../images/boton españolopciones.png" class="botonIdioma" style="z-index: 1"
-		onmousedown="cambiarIdioma()"/>
+		onmousedown="cambiarIdioma()"
+		onmouseover="this.src='../images/boton españolopciones_claro.png'"
+		onmouseout="this.src='../images/boton españolopciones.png'"/>
 
 		<img id="botonsonido" src = "../images/boton on opciones.png" class="botonSonido" style="z-index: 1"
-		onmousedown="cambiarSonido()"/>
+		onmousedown="cambiarSonido()"
+		onmouseover="this.src='../images/boton on opciones_claro.png'"
+		onmouseout="this.src='../images/boton on opciones.png'"/>
 
 		<img src = "../images/BOTONATRAS.png" class="botonAtras" style="z-index: 1"
-		onmousedown="atras()"/>
+		onmousedown="atras()"
+		onmouseover="this.src='../images/BOTONATRAS_claro.png'"
+		onmouseout="this.src='../images/BOTONATRAS.png'"/>
 	</p>
   </body>
 </html>
