--- a/src/html/Core Defense.html
+++ b/src/html/Core Defense.html
@@ -91,7 +91,15 @@
             var idioma = window.localStorage.getItem("idioma");
 
             if (idioma === "en"){
-                document.getElementById("gameAtras").src = "../images/GAMEOVER_CONTINUE.png";
+                var img = document.getElementById("gameAtras");
+                img.src = "../images/GAMEOVER_CONTINUE.png";
+
+                img.onmouseover = function(){
+					this.src= "../images/GAMEOVER_CONTINUE_claro.png";
+				}
+				img.onmouseout = function(){
+					this.src= "../images/GAMEOVER_CONTINUE.png";
+				}
             }
 
 			$.ajax({
@@ -166,7 +174,9 @@
     <p id="pgame" align="center">
         <canvas id="game" width="720" height="720" border="1"></canvas>
 
-        <img id="gameAtras" src="../images/GAMEOVER_CONTINUAR.png" onmousedown="volverMenu()" style="display:none"/>
+        <img id="gameAtras" src="../images/GAMEOVER_CONTINUAR.png" onmousedown="volverMenu()" style="display:none"
+        onmouseover="this.src='../images/GAMEOVER_CONTINUAR_claro.png'"
+		onmouseout="this.src='../images/GAMEOVER_CONTINUAR.png'"/>
     </p>
     <p align="center">
         <span id="cellTime" style="color: #FF920E;"></span></p>
