--- a/src/html/Core Defense Movil.html
+++ b/src/html/Core Defense Movil.html
@@ -195,11 +195,15 @@
 
 <body onload="initGame()" bgcolor="#37383C">
     <div id="controlesJ2" align="center" style ="display:none">
-        <canvas id="j5" width="174" height="152" border="1" ontouchstart="moverJugadorTouch(38,true)" ontouchend="moverJugadorTouch(38,false)"></canvas>
-        <canvas id="j6" width="174" height="152" border="1" ontouchstart="moverJugadorTouch(40,true)" ontouchend="moverJugadorTouch(40,false)"></canvas>
-        <canvas id="j7" width="174" height="152" border="1" ontouchstart="moverJugadorTouch(37,true)" ontouchend="moverJugadorTouch(37,false)"></canvas>
+        <p style="margin-right:85px">
+        <canvas style="padding-right:40px" id="j9" width="174" height="152" border="1" ontouchstart="moverJugadorTouch(38,true)" ontouchend="moverJugadorTouch(38,false)"></canvas>
+        <canvas id="j7" width="174" height="152" border="1" ontouchstart="moverJugadorTouch(40,true)" ontouchend="moverJugadorTouch(40,false)"></canvas>
+        <canvas id="j5" width="174" height="152" border="1" ontouchstart="moverJugadorTouch(37,true)" ontouchend="moverJugadorTouch(37,false)"></canvas>
         <canvas id="j8" width="174" height="152" border="1" ontouchstart="moverJugadorTouch(39,true)" ontouchend="moverJugadorTouch(39,false)"></canvas>
-        <canvas id="j9" width="174" height="152" border="1" ontouchstart="moverJugadorTouch(96,true)" ontouchend="moverJugadorTouch(96,false)"></canvas>
+        </p>
+        <p> 
+           <canvas id="j6" width="174" height="152" border="1" ontouchstart="moverJugadorTouch(96,true)" ontouchend="moverJugadorTouch(96,false)"></canvas>
+       </p>
     </div>
     <p align="center">
         <img id="vidaj10" src="../images/sprite_vida.png"/>
@@ -218,13 +222,17 @@
         <img id="vidaj21" src="../images/sprite_vida_jugador2_movil.png" style="visibility: hidden" />
         <img id="vidaj22" src="../images/sprite_vida_jugador2_movil.png" style="visibility: hidden" />
     </p>
-    <div align="center">
-        <canvas id="j0" width="174" height="152" border="1" ontouchstart="moverJugadorTouch(87,true)" ontouchend="moverJugadorTouch(87,false)"></canvas>
-        <canvas id="j1" width="174" height="152" border="1" ontouchstart="moverJugadorTouch(83,true)" ontouchend="moverJugadorTouch(83,false)"></canvas>
-        <canvas id="j2" width="174" height="152" border="1" ontouchstart="moverJugadorTouch(65,true)" ontouchend="moverJugadorTouch(65,false)"></canvas>
-        <canvas id="j3" width="174" height="152" border="1" ontouchstart="moverJugadorTouch(68,true)" ontouchend="moverJugadorTouch(68,false)"></canvas>
-        <canvas id="j4" width="174" height="152" border="1" ontouchstart="moverJugadorTouch(70,true)" ontouchend="moverJugadorTouch(70,false)"></canvas>
-    </div>
+    <div align="center" id="botones">
+        <p align="center">
+             <canvas id="j0" width="174" height="152" border="1" ontouchstart="moverJugadorTouch(87,true)" ontouchend="moverJugadorTouch(87,false)"></canvas>
+        </p>
+        <p style="margin-left: 80px">
+            <canvas id="j1" width="174" height="152" border="1" ontouchstart="moverJugadorTouch(65,true)" ontouchend="moverJugadorTouch(65,false)"></canvas>
+            <canvas id="j2" width="174" height="152" border="1" ontouchstart="moverJugadorTouch(83,true)" ontouchend="moverJugadorTouch(83,false)"></canvas>
+            <canvas id="j3" width="174" height="152" border="1" ontouchstart="moverJugadorTouch(68,true)" ontouchend="moverJugadorTouch(68,false)"></canvas>
+             <canvas style="padding-left: 40px" id="j4" width="174" height="152" border="1" ontouchstart="moverJugadorTouch(70,true)" ontouchend="moverJugadorTouch(70,false)"></canvas>
+        </p>
+        </div>
 
     
     
