--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 	
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet"> 
@@ -134,7 +134,6 @@
 				</div>
 			</div>
 			<!--equipo-->
-	
 				<div class = "col-md-12">
 					<h3><a class="anchor" name="equipo"></a>El equipo de <strong>Slothery Plus Black Games</strong><i class="fa fa-users pull-right hidden-xs-down" aria-hidden="true"></i></h3>
 						<div class="row">
@@ -167,10 +166,9 @@
 								<p>Programmer</p>
 							</div>
 						</div>
-					
 					</div>
 
-					<div class = "row mar-top-80">
+						<div class = "row mar-top-80">
 							<div class = "col-md-12">		
 								<h3><a class="anchor" name="contacto"></a><strong>Contacto</strong><i class="fa fa-address-book pull-right hidden-xs-down" aria-hidden="true"></i></h3>
 								<link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
@@ -213,12 +211,13 @@
 								</div>
 									</div>
 								</div>
-							</div></a>
+							</div>
+						</a>
 
-				</div>	
+					</div>	
+				</div>
 			</div>
 		</div>
-	</div>
   <footer>
   </footer>
 	
@@ -228,5 +227,5 @@
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-  </body>
+</body>
 </html>
